# DPITunnel

./: .gitmodules  LICENSE  README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/ru/evgeniy/dpitunnel/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dpi-bypass.cpp
app/src/main/java/ru/evgeniy/dpitunnel/: BrowserActivity.java  CustomEditText.java  MainActivity.java  NativeService.java  NoSSLv3SocketFactory.java  SettingsActivity.java  SettingsFragment.java  Utils.java
app/src/main/res/drawable/: ic_settings.xml
app/src/main/res/drawable-anydpi/: ic_arrow_back.xml
app/src/main/res/layout/: activity_browser.xml  activity_main.xml  activity_settings.xml  browser_tool_bar.xml  main_tool_bar.xml  settings_tool_bar.xml  tool_bar.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: settings.xml
app/src/test/java/ru/evgeniy/dpitunnel/: ExampleUnitTest.java
metadata/en-US/: description.txt  summary.txt
metadata/ru/: description.txt  name.txt  summary.txt
